--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'tailwindcss';
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@@ -6,11 +7,17 @@
 @source '../**/*.js';
 
 @theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-montserrat: Montserrat, sans-serif;
+    --color-primary: oklch(0.2221 0 0);
+    --color-secondary: oklch(1 0 0);
+    --color-grey: oklch(0.4712 0 0);
 }
 
 @layer components {
+    body {
+        @apply font-montserrat;
+    }
+
     li {
         @apply list-none;
     }
@@ -21,5 +28,9 @@
 
     .icon {
         @apply size-full;
+    }
+
+    .pill {
+        @apply rounded-[33px];
     }
 }
