--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,10 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+[x-cloak] {
+    display: none !important;
+}
+
 @theme {
     --font-montserrat: Montserrat, sans-serif;
     --color-primary: oklch(0.2221 0 0);
